# Fr3-gnuradio-block

./: README.md  block.py  block.yml  radar_notes.txt
gr-FR3/: CMakeLists.txt  MANIFEST.yml
gr-FR3/apps/: CMakeLists.txt
gr-FR3/cmake/Modules/: gnuradio-FR3Config.cmake
gr-FR3/docs/: CMakeLists.txt  README.FR3
gr-FR3/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-FR3/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-FR3/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-FR3/examples/: CMakeLists.txt
gr-FR3/grc/: #FR3_FR31Chan.block.yml#  .#FR3_FR31Chan.block.yml  CMakeLists.txt  FR3_FR3.block.yml  FR3_FR31Chan.block.yml  FR3_FR31Chan.block.yml~  FR3_miniFR3.block.yml
gr-FR3/include/gnuradio/FR3/: CMakeLists.txt  api.h  miniFR3.h
gr-FR3/lib/: CMakeLists.txt  miniFR3_impl.cc  miniFR3_impl.h
gr-FR3/python/FR3/: CMakeLists.txt  FR3.py  FR31Chan.py  __init__.py  gr-FR3
gr-FR3/python/FR3/bindings/: CMakeLists.txt  miniFR3_python.cc  python_bindings.cc
gr-FR3/python/FR3/bindings/docstrings/: miniFR3_pydoc_template.h
